# pipewire-streaming

./: .gitignore  Cargo.toml  README.md  cert.pem  create_certs.sh  key.pem
clients/rust-native/: Cargo.toml
clients/rust-native/src/: main.rs
clients/rust-wasm/: Cargo.toml
clients/rust-wasm/src/: lib.rs
clients/rust-wasm/web/: index.html
clients/simple-js/web/: index.html  index.js
clients/visualizer-js/web/: index.html  vis.js
src/: compress.rs  http.rs  main.rs  webtransport.rs
web/: index.html  index.js  vis.js
