[package]
name = "pwtester"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
crossbeam-channel = "0.5.15"
libspa = "0.8.0"
opus = "0.3.0"
pipewire = "0.8.0"
ogg = "0.9.2"
tokio = "1.44.2"
wtransport = "0.6.1"
rcgen = "0.13.2"
sha2 = "0.10.9"
base64 = "0.22.1"
axum = "0.8.4"
axum-server = {version="0.7.2", features=["tls-rustls"]}
tower-http = {version="0.6.2", features=["fs"]}
rustls = "0.23.27"
local-ip-address = "0.6.5"
qrcode = "0.14.1"
image = "0.25.6"
viuer = "0.9.1"
